explain sigma for binomial distribution

--- a/SelectedLectureNotes/ABTesting.ipynb
+++ b/SelectedLectureNotes/ABTesting.ipynb
@@ -131,7 +131,9 @@
     "\n",
     "Some properties of binomial distribution:\n",
     "$$ \\mu = p, \\sigma = \\sqrt{\\frac{p(1-p)}{N}}$$  \n",
-    ", where p - probability of success event, N - number of trials"
+    ", where p - probability of success event, N - number of trials\n",
+    "\n",
+    "Note: $\\sigma"
    ]
   },
   {
