--- a/SelectedLectureNotes/ABTesting.ipynb
+++ b/SelectedLectureNotes/ABTesting.ipynb
@@ -133,7 +133,7 @@
     "$$ \\mu = p, \\sigma = \\sqrt{\\frac{p(1-p)}{N}}$$  \n",
     ", where p - probability of success event, N - number of trials\n",
     "\n",
-    "Note: $\\sigma"
+    "Note: here, sigma is different from sigma for binomial distribution, because we're using <a target=\"_blank\" href=\"https://en.wikipedia.org/wiki/Binomial_distribution#Normal_approximation\">normal approximation</a>."
    ]
   },
   {
@@ -179,7 +179,7 @@
     "$$ N * \\hat{p} > 5$$\n",
     "$$ N * (1 -\\hat{p}) > 5$$\n",
     "\n",
-    "Then we can calculate the maring of error in the following way:  \n",
+    "Then we can calculate the margin of error in the following way:  \n",
     "\n",
     "$$ m = z * SE $$\n",
     "$$ m = z * \\sqrt{\\frac{p*(1-p)}{N}}$$"
@@ -261,7 +261,7 @@
     "\n",
     "Then to formulate $H_0$:  \n",
     "$$\\hat{d} = \\hat{p}_{exp} - \\hat{p}_{cont}$$\n",
-    "$$H_0: d = 0, d ~ N(0, SEpool)$$  \n",
+    "$$H_0: d = 0, d \\sim N(0, SEpool)$$  \n",
     "\n",
     "So if $\\hat{d} > 1.96*SEpool$ or $\\hat{d} < -1.96*SEpool$, then we **reject** the hypothesis. "
    ]
