add new cheatsheets

--- a/Projects/No_Show_Appointments.ipynb
+++ b/Projects/No_Show_Appointments.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Project: No Show Appointments Analysis\n",
     "<a id=\"top\"></a>\n",
+    "\n",
+    "REPOSITORY LINK: https://github.com/AnaMakarevich/DAND/blob/master/Projects/No_Show_Appointments.ipynb\n",
     "## Table of Contents\n",
     "<ul>\n",
     "<li><a href=\"#intro\">Introduction</a></li>\n",
