add derivation of least squares in matrix form

--- a/SelectedLectureNotes/ABTesting.ipynb
+++ b/SelectedLectureNotes/ABTesting.ipynb
@@ -11,9 +11,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Classical setup for A/B Testing for a website:   \n",
+    "<b>Null Hypothesis</b>: The new version is equal or worse than the old version.  \n",
+    "<b>Alternative Hypothesis</b>: The new version is better than the old version.    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Situation when you **can't** apply A/B testing:\n",
     "- When you're testing a whole new experience (because of change aversion and novelty effect). In this case we don't have a baseline to compare with. \n",
     "- When we want to identify what's missing on a webpage (what functionality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Novelty Effect</b> - when existing users may give an unfair advantage to the new version, because they're excited or drawn to the change  \n",
+    "<b>Change Aversion</b> - when existing users may give an unfair advantage to the old version, simply because they are unhappy with the fact of the change "
    ]
   },
   {
@@ -106,7 +123,9 @@
    "metadata": {},
    "source": [
     "**Updated Hypothesis:**  \n",
-    "Changing the color of the start button from orange to pink will increase the click-through probability"
+    "Changing the color of the start button from orange to pink will increase the click-through probability. Or:\n",
+    "$$H_0: CPR_{new} \\leq CPR_{old}$$\n",
+    "$$H_1: CPR_{new} > CPR_{old}$$\n"
    ]
   },
   {
@@ -354,6 +373,43 @@
    "metadata": {},
    "source": [
     "*Image Source: Udacity*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AB Testing in Python with Sampling Distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Steps: \n",
+    "\n",
+    "1. Compute the observed difference between the metric, click through rate, for the control and experiment group.  \n",
+    "2. Simulated the sampling distribution for the difference in proportions (or difference in click through rates), using bootstrapping.    \n",
+    "3. Use this sampling distribution to simulate the distribution under the null hypothesis, by creating a random normal distribution centered at 0 with the same spread and size.  \n",
+    "4. Computed the p-value by finding the proportion of values in the null distribution that were greater than our observed difference.  \n",
+    "5. Use this p-value to determine the statistical significance of our observed difference."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: if we're testing multiple metrics, then we must adjust the $\\alpha$ using, for example, Bonferroni correction. If we have 4 metrics and $\\alpha=0.05$, then the new, adjusted $\\alpha$ will be $0.05/4 = 0.0125$ and we should compare each metric with this new $\\alpha$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other methods for multiple tests: \n",
+    "- <a href=\"https://en.wikipedia.org/wiki/Closed_testing_procedure\">Closed testing procedure</a>  \n",
+    "- <a href=\"https://en.wikipedia.org/wiki/Boole%27s_inequality\">Boole-Bonferroni method</a>   \n",
+    "- <a href=\"https://en.wikipedia.org/wiki/Holm–Bonferroni_method\">Holm-Bonferroni method</a> "
    ]
   },
   {
