--- a/SelectedLectureNotes/Regression.ipynb
+++ b/SelectedLectureNotes/Regression.ipynb
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can define our $\\hat{y_i}$ as:\n",
+    "We can define our $\\hat{y}$ as:\n",
     "$$x^T b$$, \n",
     "where $x_i$ is a vector $(1, {x_i}')$ (I'm turning original scalar $x_i$ to a vector so that we can pack it into a dot product. By default, all vectors are column vectors. Now, b is a vector $(b_0, b_1)$. Check that we get the same result after these arrangements: \n",
     "\n",
@@ -205,7 +205,7 @@
     "\n",
     "And now we will take the derivative of this guy and equate it to $\\vec{0}$:  \n",
     "\n",
-    "$$\\nabla{E} = - 2 X^T y + 2 X^T X b = 0 $$\n",
+    "$$\\nabla{E} = - 2 X^T y + 2 X^T X b = \\vec{0} $$\n",
     "\n",
     "And now we can find the b vector as follows: \n",
     "\n",
