--- a/SelectedLectureNotes/Regression.ipynb
+++ b/SelectedLectureNotes/Regression.ipynb
@@ -1012,7 +1012,8 @@
     "- standard error fo $\\beta_i$ increases \n",
     "- t-statistic (defined as $\\frac{\\beta_i}{SE_{\\beta}}$) decreases  \n",
     "- p-values increase \n",
-    "- we fail to reject $H_0: \\beta_i = 0$\n",
+    "- we fail to reject $H_0: \\beta_i = 0$  \n",
+    "- we can even get flipped coefficients in the resulting model!!!\n",
     "\n",
     "**Solution:** look at the correlation matrix of the predictors. High values indicate highly correlated pairs. Below is the correlation matrix for the predictors for the houses dataset, described in previous section. The matrix only shows the correlation coefficients bigger than 0.5. "
    ]
@@ -1210,24 +1211,24 @@
     "$$\\text{VIF}(\\hat{\\beta}) = \\frac{1}{1-R^2_{X_j | X_{-j}}}$$\n",
     "$R^2_{X_j | X_{-j}}$ is the regression of $X_j$ onto all other variables, excluding $X_j$. \n",
     "\n",
-    "The minimum value for **VIF** is 1. When VIF = 1, it means there is no collinearity. Anything above 5 (or sometimes 10) signals about collinearity. More on VIF - <a href = \"https://onlinecourses.science.psu.edu/stat501/node/347/\"> here</a>\n",
+    "The minimum value for **VIF** is 1. When VIF = 1, it means there is no collinearity. Anything above 5 (or sometimes 10) signals about collinearity. More on VIF - [here](https://onlinecourses.science.psu.edu/stat501/node/347/)\n",
     "\n",
     "Let's run an experiment on the data we have: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ['area','bedrooms','bathrooms', 'B','C','lodge','victorian']\n",
+    "features = ['intercept','area','bedrooms','bathrooms', 'B','C','lodge','victorian']\n",
     "X = df_new[features]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -1272,38 +1273,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>area</td>\n",
-       "      <td>22.4861</td>\n",
+       "      <td>intercept</td>\n",
+       "      <td>17.4840</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>bedrooms</td>\n",
-       "      <td>88.3367</td>\n",
+       "      <td>area</td>\n",
+       "      <td>5.9843</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>bathrooms</td>\n",
-       "      <td>80.9578</td>\n",
+       "      <td>bedrooms</td>\n",
+       "      <td>22.3125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>B</td>\n",
-       "      <td>0.1039</td>\n",
+       "      <td>bathrooms</td>\n",
+       "      <td>19.1940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>C</td>\n",
-       "      <td>0.1921</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1.3707</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>lodge</td>\n",
-       "      <td>0.2354</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1.3708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>lodge</td>\n",
+       "      <td>1.9706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
        "      <td>victorian</td>\n",
-       "      <td>0.2434</td>\n",
+       "      <td>2.0465</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1311,16 +1317,17 @@
       ],
       "text/plain": [
        "     feature      VIF\n",
-       "0       area  22.4861\n",
-       "1   bedrooms  88.3367\n",
-       "2  bathrooms  80.9578\n",
-       "3          B   0.1039\n",
-       "4          C   0.1921\n",
-       "5      lodge   0.2354\n",
-       "6  victorian   0.2434"
+       "0  intercept  17.4840\n",
+       "1       area   5.9843\n",
+       "2   bedrooms  22.3125\n",
+       "3  bathrooms  19.1940\n",
+       "4          B   1.3707\n",
+       "5          C   1.3708\n",
+       "6      lodge   1.9706\n",
+       "7  victorian   2.0465"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,14 +1341,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see a very weird thing: $\\text{VIF} < 1$. Actually, it's good. $R^2$ tells us how good is the fit compared to horizontal line (simple average), so if the fit is even worse that a horizontal line, $R^2$ is negative. That's how the denominater becomes greater than 1 and the whole expression less than 1. You can read more about negative $R^2$ <a href=\"https://stats.stackexchange.com/questions/12900/when-is-r-squared-negative\">here</a>. \n",
-    "\n",
     "There is also a method is statsmodels package that calculates VIF. It can be used as follows: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -1381,38 +1386,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>area</td>\n",
-       "      <td>22.486126</td>\n",
+       "      <td>intercept</td>\n",
+       "      <td>17.483993</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>bedrooms</td>\n",
-       "      <td>88.336746</td>\n",
+       "      <td>area</td>\n",
+       "      <td>5.984297</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>bathrooms</td>\n",
-       "      <td>80.957767</td>\n",
+       "      <td>bedrooms</td>\n",
+       "      <td>22.312460</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>B</td>\n",
-       "      <td>2.050734</td>\n",
+       "      <td>bathrooms</td>\n",
+       "      <td>19.194018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>C</td>\n",
-       "      <td>1.753046</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1.370705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>lodge</td>\n",
-       "      <td>1.411047</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1.370759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>lodge</td>\n",
+       "      <td>1.970631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
        "      <td>victorian</td>\n",
-       "      <td>4.030197</td>\n",
+       "      <td>2.046512</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1420,22 +1430,23 @@
       ],
       "text/plain": [
        "     feature        VIF\n",
-       "0       area  22.486126\n",
-       "1   bedrooms  88.336746\n",
-       "2  bathrooms  80.957767\n",
-       "3          B   2.050734\n",
-       "4          C   1.753046\n",
-       "5      lodge   1.411047\n",
-       "6  victorian   4.030197"
+       "0  intercept  17.483993\n",
+       "1       area   5.984297\n",
+       "2   bedrooms  22.312460\n",
+       "3  bathrooms  19.194018\n",
+       "4          B   1.370705\n",
+       "5          C   1.370759\n",
+       "6      lodge   1.970631\n",
+       "7  victorian   2.046512"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vifs2 = pd.DataFrame({'feature': features,'VIF': [variance_inflation_factor(X.values, i) for i in range(X.shape[1])]})\n",
+    "vifs2 = pd.DataFrame({'feature': features,'VIF': [variance_inflation_factor(X.values, i) for i in range(len(features))]})\n",
     "vifs2"
    ]
   },
@@ -1448,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -1479,33 +1490,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>area</td>\n",
-       "      <td>20.951802</td>\n",
+       "      <td>intercept</td>\n",
+       "      <td>12.023573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>bathrooms</td>\n",
-       "      <td>22.252871</td>\n",
+       "      <td>area</td>\n",
+       "      <td>5.279540</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>B</td>\n",
-       "      <td>1.952174</td>\n",
+       "      <td>bathrooms</td>\n",
+       "      <td>6.715363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>C</td>\n",
-       "      <td>1.675920</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1.370560</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>lodge</td>\n",
-       "      <td>1.331210</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1.370757</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>lodge</td>\n",
+       "      <td>1.877402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
        "      <td>victorian</td>\n",
-       "      <td>4.010611</td>\n",
+       "      <td>2.020455</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1513,21 +1529,22 @@
       ],
       "text/plain": [
        "     feature        VIF\n",
-       "0       area  20.951802\n",
-       "1  bathrooms  22.252871\n",
-       "2          B   1.952174\n",
-       "3          C   1.675920\n",
-       "4      lodge   1.331210\n",
-       "5  victorian   4.010611"
+       "0  intercept  12.023573\n",
+       "1       area   5.279540\n",
+       "2  bathrooms   6.715363\n",
+       "3          B   1.370560\n",
+       "4          C   1.370757\n",
+       "5      lodge   1.877402\n",
+       "6  victorian   2.020455"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "features2 = ['area','bathrooms', 'B','C','lodge','victorian']\n",
+    "features2 = ['intercept', 'area','bathrooms', 'B','C','lodge','victorian']\n",
     "X2 = df_new[features2]\n",
     "vifs3 = pd.DataFrame({'feature': features2,'VIF': [variance_inflation_factor(X2.values, i) for i in range(X2.shape[1])]})\n",
     "vifs3"
@@ -1537,95 +1554,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look better, but we still have problems with area and bathrooms being correlated: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>feature</th>\n",
-       "      <th>VIF</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>area</td>\n",
-       "      <td>4.981880</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>B</td>\n",
-       "      <td>1.827300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>C</td>\n",
-       "      <td>1.581822</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>lodge</td>\n",
-       "      <td>1.269162</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>victorian</td>\n",
-       "      <td>3.887059</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     feature       VIF\n",
-       "0       area  4.981880\n",
-       "1          B  1.827300\n",
-       "2          C  1.581822\n",
-       "3      lodge  1.269162\n",
-       "4  victorian  3.887059"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "features3 = ['area','B','C','lodge','victorian']\n",
-    "X3 = df_new[features3]\n",
-    "vifs4 = pd.DataFrame({'feature': features3,'VIF': [variance_inflation_factor(X3.values, i) for i in range(X3.shape[1])]})\n",
-    "vifs4"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Now the values look reasonable. The value for area is still too big and looks correlated with victorian, but it's still under 5, so we can live with it. \n",
+    "\n",
     "**Another solution to multicollinearity** is to actuall combine the values somehow. "
    ]
   },
