complete linear regression

--- a/SelectedLectureNotes/Regression.ipynb
+++ b/SelectedLectureNotes/Regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression"
+    "# Linear Regression"
    ]
   },
   {
@@ -14,7 +14,8 @@
     "- [Linear Regression](#linreg)\n",
     "- [Least Squares Algorithm and its Derivation](#LSA)\n",
     "- [Categorical Variables and Linear Regression](#categlinreg)\n",
-    "- [Regression: Potential Problems](#problems)"
+    "- [Regression: Potential Problems](#problems)\n",
+    "- [Higher Order Terms](#hot)"
    ]
   },
   {
@@ -982,7 +983,7 @@
     "\n",
     "Correlated error are often the case in time series when the observation are taken at adjacent time points. To check for that, we shoul again **plot the residuals** as a function of time. If the adjacent errors are close to each other, then the errors are correlated. Also, there is a Durbin-Watson test that checks for correlation of error terms at lag 1. \n",
     "\n",
-    "ARIMA and ARMA models actually use autocorrelaction for predictions."
+    "ARIMA and ARMA models actually use autocorrelation for predictions."
    ]
   },
   {
@@ -1556,15 +1557,44 @@
    "source": [
     "Now the values look reasonable. The value for area is still too big and looks correlated with victorian, but it's still under 5, so we can live with it. \n",
     "\n",
-    "**Another solution to multicollinearity** is to actuall combine the values somehow. "
+    "**Another solution to multicollinearity** is to actually combine the values somehow. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<a id = \"hot\"></a>\n",
+    "## Higher Order Terms \n",
+    "As it has been said, sometimes we need to introduce additional variables obtained through transformation of existing variables. These are often called **higher order terms**. The most common are: \n",
+    "-  quadratics ($x_i^2$)  \n",
+    "- cubic ($x_i^3$). \n",
+    "- interactions ($x_i x_j$)  \n",
+    "For example, if we have 2 variables initally - $x_1$ and $x_2$ and decide to introduce $x_1^2$, our equation for linear regression will look as follows: \n",
+    "\n",
+    "$$\\hat{y} = b_0 + b_1 x_1 + b_2 x_2 + b_3 x_1^2$$ \n",
+    "\n",
+    "**Important**: when adding higher order terms, we still have to add lower order terms!  \n",
+    "**Even more important**: even though old terms are added, we **CAN'T** interpret them the old way: i.e. one unit increase in $x_1$ doesn't mean an increase by a coefficient if higher order term with $x_1$ is present!!!\n",
+    "\n",
+    "The choice of higher order tems depends on the type of relationship we have which can be determined by the number of curves we can draw (when we plot explanatory vs response variable): \n",
+    "- one curve -> quadratic  \n",
+    "- two curves -> cubic  \n",
+    "\n",
+    "<p><img src=\"hot.jpg\" width=\"600\" align='center'></p>\n",
+    "<i>Source: Udacity</i> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interaction Terms\n",
+    "We need to add an interaction term when we suspect that the slope for the regression line differes for different values of the variable.   \n",
+    "\n",
+    "**Example**: \n",
+    "Let's take the data for the houses and take the model $\\hat{y}=b_0 + b_1 x_1 + b_2 x_2$, $x_1$ being area and $x_2$ being neighbourhood. Then $b_2$ is the difference in price depending on which neighborhood the house is in. Geometrically, it's the distance between the two regression lines: one for each neighbourhood. We expect this distance between the lines to be constant and that difference in price for the different neighborhoods is the same regardless of the area. However, if that doesn't hold true, we need to introduce an interaction term. "
+   ]
   }
  ],
  "metadata": {
