fix mistake with log odds

--- a/SelectedLectureNotes/LogisticRegression.ipynb
+++ b/SelectedLectureNotes/LogisticRegression.ipynb
@@ -52,15 +52,15 @@
     "\n",
     "$$e^{Xb} (1-p) = p$$\n",
     "\n",
-    "$$ \\frac{1}{1-p} = e^{Xb}$$\n",
+    "$$ \\frac{p}{1-p} = e^{Xb}$$\n",
     "\n",
-    "$ \\frac{1}{1-p}$ - the odds of fraud. \n",
+    "$ \\frac{p}{1-p}$ - the odds of fraud. \n",
     "\n",
     "We can take logarithm of both sides: \n",
     "\n",
-    "$$ \\log(\\frac{1}{1-p}) = Xb$$\n",
+    "$$ \\log(\\frac{p}{1-p}) = Xb$$\n",
     "\n",
-    "The logarithm of the odds is called **LOGIT** (aka log-odds) - $\\log(\\frac{1}{1-p})$. Logit is linear in X. \n",
+    "The logarithm of the odds is called **LOGIT** (aka log-odds) - $\\log(\\frac{p}{1-p})$. Logit is linear in X. \n",
     "\n",
     "### Interpretation of the coefficietns \n",
     "\n",
