--- a/SelectedLectureNotes/StatisticsRefresher.ipynb
+++ b/SelectedLectureNotes/StatisticsRefresher.ipynb
@@ -999,9 +999,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root]",
+   "display_name": "Python [conda env:DAND]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "conda-env-DAND-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1013,7 +1013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
